<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DKActivity">
    <TextView
        android:textAlignment="center"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Đăng ký"
        android:textColor="#222222"
        android:textSize="34dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">

        <EditText
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:id="@+id/edit_name1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bgcheck"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:padding="20dp" />


        <EditText
            android:id="@+id/edit_email1"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bgcheck"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="20dp" />


        <EditText
            android:id="@+id/edit_password1"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bgcheck"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="20dp" />


        <EditText
            android:id="@+id/edit_phone1"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bgcheck"
            android:hint="Số điện thoại"
            android:padding="20dp" />


        <EditText
            android:id="@+id/edit_diachi1"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bgcheck"
            android:hint="Địa chỉ"
            android:padding="20dp" />

    </LinearLayout>




    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_weight="2"
        android:background="@drawable/redbtn"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lv"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_next_login"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_register" />
</androidx.constraintlayout.widget.ConstraintLayout>