<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DKActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Đăng nhập"
            android:textAlignment="center"
            android:textColor="#222222"
            android:textSize="34dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bgcheck"
                android:drawableLeft="@drawable/user"
                android:drawableTint="@color/teal_200"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="20dp" />


            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bgcheck"
                android:drawableLeft="@drawable/lock"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="20dp" />

            <CheckBox
                android:color="@color/white"
                android:textColor="@color/black"
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Duy trì đăng nhập" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/fb"
               android:layout_marginRight="20dp"
                android:src="@drawable/facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <ImageView
                android:id="@+id/google"
                android:layout_marginRight="20dp"
                android:src="@drawable/google"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:background="@drawable/redbtn"
            android:text="Đăng nhập"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lv"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button_next_login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_login" />

        <Button
            android:id="@+id/button_reset"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:text="Đổi mật khẩu"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_next_login" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>